[gd_scene load_steps=4 format=3 uid="uid://dqn7jrhne6wwj"]

[ext_resource type="Script" path="res://prog_88a.gd" id="1_r05h5"]
[ext_resource type="Theme" uid="uid://g8y3r3oufsf5" path="res://Big Font.tres" id="2_rudgo"]
[ext_resource type="LabelSettings" uid="uid://ba61jrjv4u1in" path="res://Big Font Centered.tres" id="3_wlttv"]

[node name="prog88a" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_r05h5")

[node name="LineEdit" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 45.0
offset_top = 19.0
offset_right = 477.0
offset_bottom = 118.0
theme = ExtResource("2_rudgo")

[node name="LineEdit2" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 656.0
offset_top = 21.0
offset_right = 1079.0
offset_bottom = 122.0
theme = ExtResource("2_rudgo")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 44.0
offset_top = 132.0
offset_right = 557.0
offset_bottom = 510.0
label_settings = ExtResource("3_wlttv")

[node name="Label2" type="Label" parent="."]
layout_mode = 0
offset_left = 634.0
offset_top = 132.0
offset_right = 1147.0
offset_bottom = 510.0
label_settings = ExtResource("3_wlttv")

[node name="btnCalc" type="Button" parent="."]
layout_mode = 0
offset_left = 138.0
offset_top = 506.0
offset_right = 370.0
offset_bottom = 593.0
theme = ExtResource("2_rudgo")
text = "Calculate"

[node name="btnClear" type="Button" parent="."]
layout_mode = 0
offset_left = 444.0
offset_top = 506.0
offset_right = 683.0
offset_bottom = 593.0
theme = ExtResource("2_rudgo")
text = "Clear"

[node name="btnExit" type="Button" parent="."]
layout_mode = 0
offset_left = 757.0
offset_top = 503.0
offset_right = 996.0
offset_bottom = 590.0
theme = ExtResource("2_rudgo")
text = "Exit"

[connection signal="pressed" from="btnCalc" to="." method="_on_btn_calc_pressed"]
[connection signal="pressed" from="btnClear" to="." method="_on_btn_clear_pressed"]
[connection signal="pressed" from="btnExit" to="." method="_on_btn_exit_pressed"]
